--- a/Arrays&Strings in js/index.html
+++ b/Arrays&Strings in js/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrays&Strings</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="script.js"  defer></script>
+    <script src="script.js" defer></script>
 </head>
+
 <body>
-   <center> <h1>List Of Elements in The Array</h1>
-    <h2>List is:</h2><p id="li"></p>
-    <div class="container">
-        <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4">
-    <table class="table">
-        <thead>
-            <tr><td> Index</td><td>Element</td></tr>
-           </thead>
-        <tbody id="tbody">
-            
-        </tbody>
-    </table></div></div></div>
-    <label for="text">Enter A String TO Search in the List</label>
-<input type="text" id="txt" style="margin: 50px;"><br>
-<button class="btn btn-danger" id="btn">Search</button>
-<p id="p"></p></center>
+    <center>
+        <h1>List Of Elements in The Array</h1>
+        <h2>List is:</h2>
+        <p id="li"></p>
+        <div class="container">
+            <div class="row">
+                <div class="col-4"></div>
+                <div class="col-4">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <td> Index</td>
+                                <td>Element</td>
+                            </tr>
+                        </thead>
+                        <tbody id="tbody">
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <label for="text">Enter A String TO Search in the List</label>
+        <input type="text" id="txt" style="margin: 50px;"><br>
+        <button class="btn btn-danger" id="btn">Search</button>
+        <p id="p"></p>
+    </center>
 </body>
+
 </html>
