--- a/DOM elemente in js/index.html
+++ b/DOM elemente in js/index.html
@@ -15,7 +15,7 @@
         <b><label for="" id="txt">Want to Change the Text:</label></b>
         <button id="clk" class="btn btn-danger"  >Click me</button> -->
         <h2>SEMESTER Register Form</h2>
-        <h3 style="margin: 10px;color: chartreuse;">only once you can Submit</h3>
+        <h3 style="margin: 10px;color: chartreuse;">At a Time only once you can Submit</h3>
         <label for="">NAME:</label><input type="text" style="margin-left: 20px;" >
         <label for="">Register.no:</label><input type="text"id="name">
         <br><br>
